js-handsontable-controls

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <p>Handsontable Controls and Demo (this page)</p>
         <p>erichynds multiselect (modified)</p>
         <p>handsontable</p>
-        <p> <a href="hot-controls.zip" id="download">download</a></p>
+        <p> <a href="https://github.com/lev-savranskiy/js-handsontable-controls" id="download">download</a></p>
         <br/>
 
         <p>Not included in archive:</p>
