--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <li><a href="#api">API</a></li>
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#caniuse">CSV download support</a></li>
-        <li><a href="#example1">Example 1 (basic)</a></li>
-        <li><a href="#example2">Example 2 (advanced)</a></li>
+        <li><a href="#" onclick="window.open('http://codepen.io/lev-savranskiy/pen/QwMMzR', '_blank')">Example 1 (basic)</a></li>
+        <li><a href="#" onclick="window.open('http://codepen.io/lev-savranskiy/pen/yyozBN', '_blank')">Example 2 (advanced)</a></li>
+
 
     </ul>
 
@@ -287,24 +288,6 @@
     </div>
 
 
-    <div class="table" id="example1">
-        <p data-height="600" data-theme-id="0" data-slug-hash="QwMMzR"
-           data-default-tab="result" data-user="lev-savranskiy" class='codepen'>See the Pen <a href='http://codepen.io/lev-savranskiy/pen/QwMMzR/'>QwMMzR</a>
-            by Lev (<a href='http://codepen.io/lev-savranskiy'>@lev-savranskiy</a>) on <a href='http://codepen.io'>CodePen</a>.
-
-        </p>
-
-    </div>
-    <div class="table" id="example2">
-
-
-
-        <p data-height="700" data-theme-id="0" data-slug-hash="yyozBN"
-           data-default-tab="result" data-user="lev-savranskiy" class='codepen'>See the Pen <a href='http://codepen.io/lev-savranskiy/pen/yyozBN/'>yyozBN</a>
-            by Lev (<a href='http://codepen.io/lev-savranskiy'>@lev-savranskiy</a>) on <a href='http://codepen.io'>CodePen</a>.
-
-        </p>
-    </div>
 
     <div class="table" id="faq">
 
@@ -444,7 +427,7 @@
     })
 
 </script>
-<script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
+
 <script src="caniuse-widget-master/js/caniuse.min.js"></script>
 
 </body>
